--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -1,5 +1,3 @@
-/* static/css/base.css  */
-
 html {
   box-sizing: border-box;
 }
@@ -16,8 +14,7 @@ html {
   box-sizing: inherit;
 }
 
-/* resets font size to be 62.5% of the user preference - 
-     in most browser configurations this will be 10px */
+
 :root {
   font-size: 62.5%;
 }
@@ -48,11 +45,11 @@ body {
 }
 
 html, body {
-  height: 100%; /* Ensure html and body take up full height */
-  margin: 0; /* Remove default margin */
-  padding: 0; /* Remove default padding */
-  overflow: hidden; /* Prevent overflow */
-  box-sizing: border-box; /* Include padding and border in width/height */
+  height: 100%; 
+  margin: 0; 
+  padding: 0; 
+  overflow: hidden; 
+  box-sizing: border-box;
 }
 
 header {
@@ -62,110 +59,111 @@ header {
 }
 
 nav {
-  position: fixed; /* Keep the navbar fixed */
-  top: 0; /* Align it to the top */
-  left: 0; /* Align it to the left */
-  width: 100%; /* Full width */
-  height: 60px; /* Fixed height */
-  display: flex; /* Flex for alignment */
-  align-items: center; /* Center items vertically */
-  padding: 0 20px; /* Padding */
-  box-sizing: border-box; /* Include padding in width calculation */
-  background: var(--nav-bg); /* Background color */
-  border-bottom: var(--borders); /* Bottom border */
-  z-index: 1000; /* Ensure navbar is on top */
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  height: 60px; 
+  display: flex; 
+  align-items: center; 
+  padding: 0 20px; 
+  box-sizing: border-box; 
+  background: var(--nav-bg); 
+  border-bottom: var(--borders); 
+  z-index: 1000;
 }
 
 main {
   margin-top: 55px;
-  flex: 1; /* Allow the main content to expand and take up remaining space */
+  flex: 1; 
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start; /* Center content vertically and horizontally */
-  width: 100%; /* Full width */
-  overflow-y: auto; /* Scroll vertically if content overflows */
+  justify-content: flex-start; 
+  width: 100%; 
+  height: 100%;
+  overflow-y: auto;
 }
 
 .header-logo-container {
-  display: flex;  /* Flexbox for centering content */
-  align-items: center;  /* Center logo vertically */
-  height: 100%;  /* Fill the height of the nav */
-  margin-right: auto;  /* Push it to the left */
-  max-height: 100%;  /* Ensure the container respects nav's height */
-  overflow: hidden;  /* Hide overflow if the image is too large */
+  display: flex;  
+  align-items: center; 
+  height: 100%; 
+  margin-right: auto; 
+  max-height: 100%; 
+  overflow: hidden; 
 }
 
 .header-logo-container a {
-  display: flex;  /* Flexbox for centering content */
-  align-items: center;  /* Center logo vertically */
-  height: 100%;  /* Fill the height of the logo container */
+  display: flex; 
+  align-items: center; 
+  height: 100%;  
 }
 
-/* Scale the image to fit the anchor tag */
+
 .header-logo-container img {
-  max-height: 100%;  /* Scale the image to fit the container height */
-  width: auto;  /* Maintain the aspect ratio */
-  display: block;  /* Remove bottom space/gap */
-  max-width: 100%;  /* Prevent the image from being wider than the container */
+  max-height: 100%;  
+  width: auto; 
+  display: block; 
+  max-width: 100%; 
 }
 
 
 nav ul {
-  display: flex;  /* Make ul a flex container */
-  align-items: center;  /* Center items vertically */
-  padding: 0;  /* Remove default padding */
-  list-style: none;  /* Remove bullet points */
-  margin: 0;  /* Reset margin */
+  display: flex; 
+  align-items: center;  
+  padding: 0; 
+  list-style: none;  
+  margin: 0;
   font-size: large;
 }
 
 nav ul li {
-  margin-left: 20px;  /* Add spacing between the items */
+  margin-left: 20px;
 }
 
 nav ul li a {
-  text-decoration: none;  /* Remove underline from links */
-  padding: 10px 15px;  /* Add padding for better appearance */
-  background-color: transparent;  /* Background color */
-  color: #000000;  /* Text color */
+  text-decoration: none;
+  padding: 10px 15px; 
+  background-color: transparent;  
+  color: #000000;  
   transition: background-color 0.3s;
-  border-bottom: 2px solid transparent;  /* Smooth transition for hover effect */
+  border-bottom: 2px solid transparent; 
 }
 
 nav ul li a:hover {
-  background-color: #ffffff; /* Example hover background color */
-  border-bottom: 2px solid #000000; /* Add bottom border on hover */
+  background-color: #ffffff;
+  border-bottom: 2px solid #000000;
 }
 
 footer {
-  height: 60px; /* Fixed footer height */
-  width: 100%; /* Full width */
-  background: var(--nav-bg); /* Background color */
-  border-top: var(--borders); /* Top border */
+  height: 60px;
+  width: 100%; 
+  background: var(--nav-bg);
+  border-top: var(--borders);
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 #logout-form {
-  margin: 0;  /* Remove margin from form */
-  padding: 0;  /* Remove padding from form */
+  margin: 0;  
+  padding: 0; 
 }
 
 #logout-btn {
-  padding: 10px 15px;  /* Add padding to match links */
-  border: none;  /* Remove default button border */
-  background-color: var(--button-bg);  /* Same background color as links */
-  color: #fff;  /* Text color to match links */
-  cursor: pointer;  /* Cursor change to pointer to indicate clickable */
-  border-radius: 4px;  /* Rounded corners to match links */
-  text-decoration: none;  /* Remove any default underline */
-  transition: background-color 0.3s;  /* Smooth transition for hover effect */
+  padding: 10px 15px;  
+  border: none; 
+  background-color: var(--button-bg); 
+  color: #fff; 
+  cursor: pointer;  
+  border-radius: 4px; 
+  text-decoration: none; 
+  transition: background-color 0.3s;  
 }
 
 #logout-btn:hover {
-  background-color: var(--button-bg-hove);  /* Same hover effect as links */
+  background-color: var(--button-bg-hove);
   color: var(--link-hover-color);
-  border: #000000 solid 2px;  /* Same hover text color */
+  border: #000000 solid 2px; 
 }
