--- a/main_app/static/css/profile/dashboard.css
+++ b/main_app/static/css/profile/dashboard.css
@@ -1,6 +1,114 @@
+h1 {
+    font-size: 4em;
+}
+
+h2 {
+    font-size: 2em;
+    margin: 0px 0px 12px 0px;
+}
+
+.dashboard-flex {
+    display: flex;
+    gap: 20px; 
+    margin-bottom: 25px; 
+    width: 100%;
+    max-height: 600px;
+    padding: 0px 20px;
+}
+
+.feedings-container,
+.metrics-container {
+    flex: 1; 
+    padding: 20px; 
+    border: 1px solid #b3b3b3; 
+    border-radius: 5px; 
+    background-color: #f9f9f9; 
+    width: 100%;
+    height: 100%;
+    max-height: 300px;
+}
+
+.feedings-container ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    height: 85%;
+    max-height: 400px;
+    overflow-y:  scroll;
+    border-bottom: #000000 solid 3px;
+    border-top: #000000 solid 3px;
+}
+
+.feedings-container ul li {
+    margin-bottom: 15px;
+}
+
+.feedings-container ul li a {
+    text-decoration: none; 
+    color: inherit;
+    font-size: x-large; 
+}
+
+.feedings-container ul li a:hover {
+    text-decoration: none; 
+    color: inherit; 
+}
+
+.feedings-container ul::-webkit-scrollbar {
+    display: none; 
+}
+
+
+.metrics-flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 20px;
+    flex-grow: 1; 
+    flex-shrink: 1;
+    max-width: 100%;
+    max-height: 100%;
+    overflow: hidden;
+    box-sizing: border-box;
+    padding-bottom: 30px;
+    border-top: #000000 solid 3px;
+}
+
+.today_calories {
+    flex: 1;
+    font-size: 300%;
+    margin-top: 0;
+}
+
+#nutritionChart {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    flex: 1;
+}
+
+@media (min-width: 768px) {
+    .metrics-flex-container {
+        flex-direction: row;
+    }
+}
+
+@media (max-width: 768px) {
+    .metrics-flex-container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    #nutritionChart {
+        max-width: 100%;
+        height: auto;
+    }
+}
+
+
 .search-results {
-    border: 1px solid #ccc;
     max-height: 200px;
+    max-width: 200px;
     overflow-y: auto;
     position: absolute;
     background-color: white;
@@ -13,6 +121,7 @@
     cursor: pointer;
     display: flex;
     align-items: center;
+    width: 100%;
 }
 
 .food-image {
@@ -34,5 +143,5 @@
 }
 
 .hidden-form {
-    display: none; /* Initially hide the form */
+    display: none; 
 }
