--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -19,7 +19,13 @@ html {
   font-size: 62.5%;
 }
 
+
 body {
+  font-family: "Comfortaa", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+
   margin: 0;
   margin-top: 60px;
   display: flex;
@@ -74,15 +80,19 @@ nav {
 }
 
 main {
-  margin-top: 55px;
+  margin-top: 65px;
+  margin-bottom: 20px;
   flex: 1; 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start; 
-  width: 100%; 
-  height: 100%;
+  width: 98%; 
+  height: 98%;
   overflow-y: auto;
+  border: 2px solid #000000;
+  box-shadow: 10px 10px 20px rgba(61, 61, 61, 0.2);
+  border-radius: 5px; 
 }
 
 .header-logo-container {
@@ -122,7 +132,9 @@ nav ul li {
   margin-left: 20px;
 }
 
-nav ul li a {
+nav ul li a,
+.btn-danger,
+.btn-warning {
   text-decoration: none;
   padding: 10px 15px; 
   background-color: transparent;  
@@ -132,6 +144,16 @@ nav ul li a {
 }
 
 nav ul li a:hover {
+  background-color: #ffffff;
+  border-bottom: 2px solid #000000;
+}
+
+.btn-danger:hover{
+  background-color: #ffffff;
+  border-bottom: 2px solid #000000;
+}
+
+.btn-warning:hover{
   background-color: #ffffff;
   border-bottom: 2px solid #000000;
 }
@@ -163,6 +185,19 @@ footer {
 }
 
 #logout-btn:hover {
+  background-color: var(--button-bg-hove);
+  color: var(--link-hover-color);
+  border: #000000 solid 2px; 
+}
+
+button {
+  background: black;
+  color: white;
+  border-radius: 5px;
+  padding: 5px 10px;
+}
+
+button:hover {
   background-color: var(--button-bg-hove);
   color: var(--link-hover-color);
   border: #000000 solid 2px; 
