--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -10,6 +10,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="{% static 'css/base.css' %}" />
         <link rel="shortcut icon" type="image/png" href="{% static 'images/logo.png' %}" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
         <title>Daily Bread</title>
         {% block head %}
         {% endblock %}
