--- a/main_app/templates/profile/meal_detail.html
+++ b/main_app/templates/profile/meal_detail.html
@@ -1,61 +1,59 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/profile/meal_detail.css' %}" />
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+{% endblock %}
+
 
 {% block content %}
 
 <h1>Meal Details</h1>
 
-<a href="{% url 'meal-delete' feeding.id %}" class="btn danger">Delete</a>
-<a href="{% url 'meal-update' feeding.id %}" class="btn warning">Edit</a>
+<div class="meal-header">
+    <a href="{% url 'meal-delete' feeding.id %}" class="btn-danger">Delete</a>
+    <a href="{% url 'meal-update' feeding.id %}" class="btn-warning">Edit</a>
+</div>
+<div class="meal-date-kind">    
+    <p><strong>Date:</strong> {{ feeding.date }}</p>
+    <p><strong>Meal:</strong> {{ feeding.get_meal_display }}</p>
+</div>
+<div class="food-item-div">
+    <table>
+        <thead>
+            <tr>
+                <th></th>
+                <th>Name</th>
+                <th>Calories</th>
+                <th>Fats</th>
+                <th>Proteins</th>
+                <th>Carbs</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for item in feeding.food_item.all %}
+            <tr>
+                <td>
+                    {% if item.photo_url %}
+                        <img src="{{ item.photo_url }}" alt="{{ item.name }}" class="food-item-image">
+                    {% else %}
+                        No Image Available
+                    {% endif %}
+                </td>
+                <td>{{ item.name }}</td>
+                <td>{{ item.calories }}</td>
+                <td>{{ item.fats }}</td>
+                <td>{{ item.proteins }}</td>
+                <td>{{ item.carbs }}</td>
+            </tr>
+            {% empty %}
+            <tr>
+                <td colspan="6">No food items found.</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 
-<p><strong>Date:</strong> {{ feeding.date }}</p>
-<p><strong>Meal:</strong> {{ feeding.get_meal_display }}</p>
-
-<h2>Food Items</h2>
-<table>
-    <thead>
-        <tr>
-            <th></th>
-            <th>Name</th>
-            <th>Calories</th>
-            <th>Fats</th>
-            <th>Proteins</th>
-            <th>Carbs</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for item in feeding.food_item.all %}
-        <tr>
-            <td>
-                {% if item.photo_url %}
-                    <img src="{{ item.photo_url }}" alt="{{ item.name }}" class="food-item-image">
-                {% else %}
-                    No Image Available
-                {% endif %}
-            </td>
-            <td>{{ item.name }}</td>
-            <td>{{ item.calories }}</td>
-            <td>{{ item.fats }}</td>
-            <td>{{ item.proteins }}</td>
-            <td>{{ item.carbs }}</td>
-        </tr>
-        {% empty %}
-        <tr>
-            <td colspan="6">No food items found.</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-
-<style>
-
-.food-item-image {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    border-radius: 5px; 
-    margin-right: 10px; 
-}
-
-</style>
 
 {% endblock %}
