--- a/main_app/templates/profile/meal_detail.html
+++ b/main_app/templates/profile/meal_detail.html
@@ -21,7 +21,7 @@
 <div class="food-item-div">
     <table>
         <thead>
-            <tr>
+            <tr class="table-header">
                 <th></th>
                 <th>Name</th>
                 <th>Calories</th>
@@ -41,10 +41,10 @@
                     {% endif %}
                 </td>
                 <td>{{ item.name }}</td>
-                <td>{{ item.calories }}</td>
-                <td>{{ item.fats }}</td>
-                <td>{{ item.proteins }}</td>
-                <td>{{ item.carbs }}</td>
+                <td>{{ item.calories }} kcal</td>
+                <td>{{ item.fats }} g</td>
+                <td>{{ item.proteins }} g</td>
+                <td>{{ item.carbs }} g</td>
             </tr>
             {% empty %}
             <tr>
@@ -52,6 +52,16 @@
             </tr>
             {% endfor %}
         </tbody>
+        <tfoot>
+            <tr class="table-footer">
+                <td></td>
+                <td><strong>Total</strong></td>
+                <td>{{ total_calories }} kcal</td>
+                <td>{{ total_fats }} g</td>
+                <td>{{ total_proteins }} g</td>
+                <td>{{ total_carbs }} g</td>
+            </tr>
+        </tfoot>
     </table>
 </div>
 
