--- a/main_app/templates/main_app/feeding_form.html
+++ b/main_app/templates/main_app/feeding_form.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
-
+{% load static %}
+{% block head %}
+  <link rel="stylesheet" href="{% static 'css/form.css' %}" />
+{% endblock %} 
 {% block content %}
 <h2>Edit Feeding</h2>
 
