--- a/main_app/templates/main_app/feeding_confirm_delete.html
+++ b/main_app/templates/main_app/feeding_confirm_delete.html
@@ -3,15 +3,40 @@
 {% block content %}
 
 <div class="page-header">
-  <h1>Delete Cat?</h1>
+  <h1>Delete Meal?</h1>
 </div>
 
 <h2>Are you sure you want to delete {{ feeding }}?</h2>
 
 <form action="" method="post" class="form">
   {% csrf_token %}
-  <a href="{% url 'meal-detail' feeding.id %}" class="btn secondary">Cancel</a>
-  <button type="submit" class="btn danger">Yes - Delete!</button>
+  <div class="cancel-delete">
+    <a href="{% url 'meal-detail' feeding.id %}" class="cancel-link">Cancel</a>
+    <button type="submit" class="btn danger">Yes - Delete!</button>
+  </div>
 </form>
+
+<style>
+  h1, h2 {
+    font-size: 2em;
+  }
+
+  .cancel-delete {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+  }
+
+  .cancel-link {
+    text-decoration: none;
+    color: inherit;
+    font-size: clamp(0.5rem, 2vw + 0.5rem, 3rem);
+  }
+
+  .cancel-link:hover{
+    font-weight: 600;
+    border-bottom: #000000 solid 2px;
+  }
+</style>
 
 {% endblock %}
