--- a/main_app/templates/profile/dashboard.html
+++ b/main_app/templates/profile/dashboard.html
@@ -25,7 +25,7 @@
         <h2>Today's Progress</h2>
         <div class="metrics-flex-container">
             <p class="today_calories"><strong>Total Calories:</strong></br> {{ daily_calories }} kcal</p>
-            <canvas id="nutritionChart" width="200" height="200"></canvas>
+            <canvas id="nutritionChart" width="100" height="100"></canvas>
         </div>
     </div>
 </div>
@@ -306,6 +306,7 @@
         },
         options: {
             responsive: true,
+            maintainAspectRatio: false,
             plugins: {
                 legend: {
                     position: 'top',
