--- a/main_app/templates/main_app/feeding_form.html
+++ b/main_app/templates/main_app/feeding_form.html
@@ -9,7 +9,6 @@
 <form method="post" id="feeding-form">
     {% csrf_token %}
 
-    <!-- Render Feeding Form -->
     <div>
         {{ feeding_form.non_field_errors }}
         {{ feeding_form.as_p }}
@@ -48,7 +47,7 @@
             newForm.innerHTML = newForm.innerHTML.replace(/fooditem-(\d+)/g, `fooditem-${formCount}`);
             newForm.querySelectorAll('input').forEach(input => input.value = '');
 
-            const deleteCheckboxWrapper = newForm.querySelector('p'); // Finds the first <p> tag
+            const deleteCheckboxWrapper = newForm.querySelector('p'); 
             if (deleteCheckboxWrapper && deleteCheckboxWrapper.textContent.includes('Delete')) {
                 deleteCheckboxWrapper.remove();
             }
